# kinect_brightness_monitoring

./: .gitignore  README.md  conanfile.py
lighting/: CMakeLists.txt
src/: CMakeLists.txt  enumerate.cpp
